# ML_designpattern

./: .gitignore  .mcp.json.example  README.md
03_my_implementations/chapter2_training/05_iris_sklearn_outlier/: README.md  SPECIFICATION.md  pyproject.toml
03_my_implementations/chapter2_training/05_iris_sklearn_outlier/src/iris_sklearn_outlier/: data_loader.py  model.py  onnx_exporter.py  train.py  trainer.py
03_my_implementations/chapter2_training/05_iris_sklearn_outlier/test_results/: all_tests_green.txt  all_tests_red.txt
03_my_implementations/chapter2_training/05_iris_sklearn_outlier/tests/: test_data_loader.py  test_model.py  test_onnx_exporter.py  test_trainer.py
03_my_implementations/chapter2_training/06_cifar10_cnn/: README.md  SPECIFICATION.md  pyproject.toml
03_my_implementations/chapter2_training/06_cifar10_cnn/src/cifar10_cnn/: data_loader.py  mlflow_manager.py  model.py  onnx_exporter.py  train.py  trainer.py
03_my_implementations/chapter2_training/06_cifar10_cnn/tests/: test_data_loader.py  test_mlflow_manager.py  test_model.py  test_onnx_exporter.py  test_trainer.py
03_my_implementations/chapter3_release_patterns/01_model_in_image/: Dockerfile  README.md  SPECIFICATION.md  pyproject.toml  run.sh
03_my_implementations/chapter3_release_patterns/01_model_in_image/k8s/: deployment.yml  hpa.yml  namespace.yml  service.yml
03_my_implementations/chapter3_release_patterns/01_model_in_image/src/model_in_image/: app.py  prediction.py
03_my_implementations/chapter3_release_patterns/01_model_in_image/tests/: test_api.py  test_prediction.py
03_my_implementations/chapter3_release_patterns/01_model_in_image/tests/test_results/: README.md  full_test_results.txt  full_test_with_coverage.txt
03_my_implementations/chapter3_release_patterns/02_model_load_pattern/: Dockerfile  README.md  SPECIFICATION.md  pyproject.toml  requirements.txt  run.sh
03_my_implementations/chapter3_release_patterns/02_model_load_pattern/k8s/: deployment.yml  hpa.yml  namespace.yml  service.yml
03_my_implementations/chapter3_release_patterns/02_model_load_pattern/model_loader/: Dockerfile  entrypoint.sh  main.py  requirements.txt
03_my_implementations/chapter3_release_patterns/02_model_load_pattern/src/: configurations.py  main.py
03_my_implementations/chapter3_release_patterns/02_model_load_pattern/src/ml/: prediction.py
03_my_implementations/chapter3_release_patterns/02_model_load_pattern/tests/: test_api.py  test_configurations.py  test_model_loader.py  test_prediction.py
03_my_implementations/chapter3_release_patterns/02_model_load_pattern/tests/test_results/: README.md
03_my_implementations/chapter4_serving_patterns/01_web_single_pattern/: Dockerfile  README.md  SPECIFICATION.md  pyproject.toml  requirements.txt  run.sh
03_my_implementations/chapter4_serving_patterns/01_web_single_pattern/src/: main.py
03_my_implementations/chapter4_serving_patterns/01_web_single_pattern/src/configurations/: constants.py
03_my_implementations/chapter4_serving_patterns/01_web_single_pattern/src/ml/: prediction.py
03_my_implementations/chapter4_serving_patterns/01_web_single_pattern/tests/: test_api.py  test_configuration.py  test_prediction.py
03_my_implementations/chapter4_serving_patterns/01_web_single_pattern/tests/test_results/: README.md
03_my_implementations/chapter4_serving_patterns/03_asynchronous_pattern/: Dockerfile.proxy  Dockerfile.worker  README.md  SPECIFICATION.md  docker-compose.yml  pyproject.toml  run_proxy.sh  run_worker.sh  test_async.sh
03_my_implementations/chapter4_serving_patterns/03_asynchronous_pattern/src/: README.md  configurations.py  models.py
03_my_implementations/chapter4_serving_patterns/03_asynchronous_pattern/src/backend/: onnx_client.py  worker.py
03_my_implementations/chapter4_serving_patterns/03_asynchronous_pattern/src/proxy/: app.py
03_my_implementations/chapter4_serving_patterns/03_asynchronous_pattern/src/utils/: redis_client.py
03_my_implementations/chapter4_serving_patterns/04_batch_pattern/: Dockerfile  README.md  SPECIFICATION.md  docker-compose.yml  file:testdb  pyproject.toml
03_my_implementations/chapter4_serving_patterns/04_batch_pattern/src/: README.md  configurations.py  constants.py
03_my_implementations/chapter4_serving_patterns/04_batch_pattern/src/api/: app.py  routers.py
03_my_implementations/chapter4_serving_patterns/04_batch_pattern/src/db/: cruds.py  database.py  models.py  schemas.py
03_my_implementations/chapter4_serving_patterns/04_batch_pattern/src/ml/: prediction.py
03_my_implementations/chapter4_serving_patterns/04_batch_pattern/tests/: conftest.py  test_01_prediction.py  test_02_database.py  test_03_api.py  test_04_batch_job.py
03_my_implementations/chapter4_serving_patterns/05_prep_pred_pattern/: .gitignore  Dockerfile.pred  Dockerfile.prep  README.md  SPECIFICATION.md  check_transformers.py  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
03_my_implementations/chapter4_serving_patterns/05_prep_pred_pattern/resnet50_onnx_runtime/: extract_resnet50_onnx.py  onnx_runtime_server_entrypoint.sh  requirements.txt
03_my_implementations/chapter4_serving_patterns/05_prep_pred_pattern/src/: README.md  configurations.py  constants.py
03_my_implementations/chapter4_serving_patterns/05_prep_pred_pattern/tests/: test_api.py  test_prediction.py  test_transformers.py
my_implementations/chapter2_training/03_iris_binary/: README.md  SPECIFICATION.md  pyproject.toml  run_experiment.py
my_implementations/chapter2_training/03_iris_binary/quality_checks/: README.md
my_implementations/chapter2_training/iris_sklearn_svc/: .gitignore  SPECIFICATION.md  pyproject.toml
my_implementations/chapter2_training/iris_sklearn_svc/test_results/: data_loader_red.txt  model_green.txt
my_implementations/chapter2_training/iris_sklearn_svc/tests/: test_exporter.py  test_integration.py
my_implementations/chapter2_training/model_db/: README.md  pyproject.toml
my_implementations/chapter2_training/model_db/src/: configurations.py
my_implementations/chapter2_training/model_db/tests/: test_cruds.py
(+184 files in other folders)
