[project]
name = "iris-sklearn-outlier"
version = "0.1.0"
description = "Iris outlier detection with One-Class SVM and MLflow"
authors = [
    {name = "kshr123", email = "kshr123@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Core ML libraries
    "numpy>=2.0.0",
    "scikit-learn>=1.5.0",

    # MLflow for experiment tracking
    "mlflow>=2.10.0",

    # ONNX for model export
    "skl2onnx>=1.16.0",
    "onnxruntime>=1.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "black>=24.4.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--cov --cov-report=html --cov-report=term"
