[project]
name = "cifar10-cnn"
version = "0.1.0"
description = "CIFAR-10 CNN画像分類（PyTorch + MLflow + ONNX）"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "mlflow>=2.10.0",
    "onnx>=1.17.0",
    "onnxruntime>=1.20.0",
    "numpy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "black>=24.4.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers"

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
