[project]
name = "ml-design-pattern-model-in-image"
version = "0.1.0"
description = "Implementation of Model-in-Image Pattern from ML System Design Patterns"
authors = [
    {name = "kshr123", email = "kshr123@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Web framework for serving
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",

    # ML libraries
    "numpy>=2.0.0",
    "scikit-learn>=1.5.0",
    "onnxruntime>=1.18.0",

    # Utilities
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "black>=24.4.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "httpx>=0.27.0",  # For testing FastAPI
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/model_in_image"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=html --cov-report=term"
