[project]
name = "ml-design-pattern-model-load"
version = "0.1.0"
description = "Implementation of Model-Load Pattern from ML System Design Patterns"
authors = [
    {name = "kshr123"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Core ML libraries
    "numpy>=2.0.0",
    "onnxruntime>=1.19.0",

    # Web framework for serving
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",

    # Data validation
    "pydantic>=2.7.0",

    # Google Cloud Storage (for InitContainer)
    "google-cloud-storage>=2.18.0",

    # CLI tool (for model_loader)
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "black>=24.4.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "httpx>=0.27.0",  # For testing FastAPI
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "model_loader"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
python_version = "3.13"
strict = false  # ONNXRuntimeにスタブがないため緩和
warn_return_any = false
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=html --cov-report=term -v"
