[project]
name = "ml-design-pattern-asynchronous"
version = "0.1.0"
description = "Implementation of Asynchronous Pattern from ML System Design Patterns"
authors = [
    {name = "kshr123"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",

    # Redis for queue and cache
    "redis>=5.0.0",

    # ONNX Runtime for inference
    "onnxruntime>=1.16.0",

    # Data processing
    "numpy>=1.24.0,<2.0.0",

    # Utilities
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.4.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=html --cov-report=term"
