[project]
name = "ml-design-pattern-prep-pred"
version = "0.1.0"
description = "Implementation of Prep-Pred Pattern from ML System Design Patterns"
authors = [
    {name = "kshr123", email = "kshr123@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Core ML libraries
    "numpy>=2.0.0",

    # Image processing
    "pillow>=10.0.0",

    # Machine learning
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",

    # Web framework for serving
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",

    # gRPC client
    "grpcio>=1.59.0",
    "protobuf>=4.24.0",

    # Utilities
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",  # FastAPIテスト用
    "black>=24.4.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
python_version = "3.13"
strict = false
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=html --cov-report=term -v"
asyncio_mode = "auto"
