[project]
name = "iris-binary"
version = "0.1.0"
description = "Iris binary classification with MLflow"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mlflow>=2.10.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "onnx>=1.15.0",
    "onnxruntime>=1.16.0",
    "skl2onnx>=1.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
