[project]
name = "iris-sklearn-svc"
version = "0.1.0"
description = "Iris SVM classification pipeline with MLflow"
authors = [{name = "kshr123"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "scikit-learn>=1.5.0",
    "mlflow>=2.18.0",
    "onnx>=1.17.0",
    "skl2onnx>=1.18.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-cov>=6.0.0",
    "black>=24.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "onnxruntime>=1.23.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ['py313']

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
